packages/ses/test/error/issue-2941/test2/error-trapping-none.demo.js
import '../../../../index.js';

lockdown({
  errorTaming: 'unsafe',
  stackFiltering: 'concise',
  errorTrapping: 'none',
});

throw Error(`Does this place have an
  echo?
`);
